--- a/templates/home.html
+++ b/templates/home.html
@@ -1,3 +1,4 @@
+<!Adapted from: https://habrahabr.ru/company/ods/blog/335998/>
 <!doctype html>
 <html>
 <head>
@@ -9,7 +10,7 @@
   <body>
     <div class="container">
       <div>
-        Здесь можно порисовать.
+        Drawing box.
         <canvas id="the_stage" width="200" height="200">fsf</canvas>
         <div>
           <button type="button" class="btn btn-default butt" onclick="clearCanvas()"><strong>clear</strong></button>
