--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,4 @@
-<!Adapted from: https://habrahabr.ru/company/ods/blog/335998/>
+<!-- Adapted from: https://habrahabr.ru/company/ods/blog/335998/ -->
 <!doctype html>
 <html>
 <head>
@@ -14,7 +14,7 @@
         <canvas id="the_stage" width="200" height="200">fsf</canvas>
         <div>
           <button type="button" class="btn btn-default butt" onclick="clearCanvas()"><strong>clear</strong></button>
-          <button type="button" class="btn btn-default butt" id="save" onclick="saveImg()"><strong>save</strong></button>
+          <!--button type="button" class="btn btn-default butt" id="save" onclick="saveImg()"><strong>save</strong></button >
         </div>
         <div>
           Please select one of the following
@@ -29,7 +29,7 @@
           <input type="radio" name="action" value="8" id="digit">8
           <input type="radio" name="action" value="9" id="digit">9
         </div>
-      </div>
+      </div -->
       <div class="col-md-6 column">
         <h3>result:</h3>
         <h2 id="rec_result"></h2>
