--- a/templates/home.html
+++ b/templates/home.html
@@ -24,18 +24,33 @@
 
       <div class="starter-template">
         <h1>Drawing box</h1>
-        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+        <p class="lead">Drow number to save</p>
       </div>
 
       <!-- Adapted from: https://habrahabr.ru/company/ods/blog/335998/ -->
       <div>
-        Drawing box.
         <canvas id="the_stage" width="200" height="200" align="left">fsf</canvas>
         <div>
           <button type="button" class="btn btn-default butt" onclick="clearCanvas()"><strong>clear</strong></button>
-          <!--button type="button" class="btn btn-default butt" id="save" onclick="saveImg()"><strong>save</strong></button -->
+          <button type="button" class="btn btn-default butt" id="save" onclick="saveImg()"><strong>save</strong></button>
         </div>
       <div class="col-md-6 column">
+
+          <div>
+              <p class="lead"></p>Please select one of the following<br></p>
+              <input type="radio" name="action" value="0" id="digit">0<br>
+              <input type="radio" name="action" value="1" id="digit">1<br>
+              <input type="radio" name="action" value="2" id="digit">2<br>
+              <input type="radio" name="action" value="3" id="digit">3<br>
+              <input type="radio" name="action" value="4" id="digit">4<br>
+              <input type="radio" name="action" value="5" id="digit">5<br>
+              <input type="radio" name="action" value="6" id="digit">6<br>
+              <input type="radio" name="action" value="7" id="digit">7<br>
+              <input type="radio" name="action" value="8" id="digit">8<br>
+              <input type="radio" name="action" value="9" id="digit">9<br>
+            </div>
+          </div>       
+
         <h3>result:</h3>
         <h2 id="rec_result"></h2>
       </div>
