--- a/templates/home.html
+++ b/templates/home.html
@@ -25,7 +25,8 @@
         <p>Input:</p>
         <canvas id="input" style="border:1px solid" width="140" height="140"></canvas>
         <hr>
-        <p>Output:</p>
+        <p id="output-text">Output:<font size="+2">This is bigger text.</font>
+        </p>
         <table id="output" class="table">
           <tr>
             <th class="col-md-1"></th>
