--- a/templates/home.html
+++ b/templates/home.html
@@ -25,8 +25,12 @@
         <p>Input:</p>
         <canvas id="input" style="border:1px solid" width="140" height="140"></canvas>
         <hr>
-        <p id="output-text">Output:<font size="+2">This is bigger text.</font>
-        </p>
+        <h1>
+          Seems like you wrote number:
+          <span id="output-text">
+          </span>
+        </h1>
+        <br>
         <table id="output" class="table">
           <tr>
             <th class="col-md-1"></th>
