html and comments

--- a/templates/home.html
+++ b/templates/home.html
@@ -34,11 +34,9 @@
         <table id="output" class="table">
           <tr>
             <th class="col-md-1"></th>
-            <th class="col-md-2">Regression
-              <a href="https://www.tensorflow.org/get_started/mnist/beginners">(For Beginners)</a>
+            <th class="col-md-2">Regression based on looking at every pixel
             </th>
-            <th class="col-md-2">Convolutional
-              <a href="https://www.tensorflow.org/get_started/mnist/pros">(For Experts)</a>
+            <th class="col-md-2">Convolutional multilayer neural network improved results
             </th>
           </tr>
           <tr>
